--- a/.github/workflows/auto_pull_issues.yml
+++ b/.github/workflows/auto_pull_issues.yml
@@ -12,4 +12,4 @@ jobs:
       - uses: actions/add-to-project@v0.5.0
         with:
           project-url: https://github.com/orgs/BnB3DAO/projects/2
-          github-token: ${{ secrets.PROJECT_TOKEN }}
+          github-token: ${{ secrets.AUTO_PULL_ISSUES }}
