--- a/.github/workflows/auto_pull_issues.yml
+++ b/.github/workflows/auto_pull_issues.yml
@@ -7,7 +7,8 @@ on:
 jobs:
   add-to-project:
     runs-on: ubuntu-latest
-    if: matches(github.event.issue.title, '^(task|okr)', 'i')
+    if: startsWith(github.event.issue.title, 'TASK') || 
+      startsWith(github.event.issue.title, 'OKR')
     steps:
       - uses: actions/add-to-project@v0.5.0
         with:
