--- a/.github/workflows/forward_comments_to_issue.yml
+++ b/.github/workflows/forward_comments_to_issue.yml
@@ -116,7 +116,7 @@ jobs:
       - name: Create issue in target repo
         env:
           TARGET_REPO_OWNER: BnB3DAO
-          TARGET_REPO_NAME: test-dst
+          TARGET_REPO_NAME: BnB3DAO-Member
           GITHUB_TOKEN: ${{ secrets.DST_ISSUE_TOKEN }}
         run: |
           ISSUE_URL="${{ steps.comment-details.outputs.issue_url }}"
